--- a/kitchen.html
+++ b/kitchen.html
@@ -1,174 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Kjøkken</title>
-  <style>
-    body {
-      background:#000;
-      color:white;
-      font-family:Arial, sans-serif;
-      text-align:center;
-      padding:30px;
-    }
-
-    h1 {
-      margin-bottom:20px;
-    }
-
-    .order {
-      padding:20px;
-      margin:12px auto;
-      border-radius:10px;
-      font-size:28px;
-      max-width:650px;
-      text-align:left;
-      transition: background 0.3s;
-    }
-
-    /* 🎨 FARGER */
-    .green { background:#1e3d2f; }
-    .yellow { background:#4a4a1e; }
-    .red { background:#4a1e1e; }
-
-    .allergy {
-      color:#ff4444;
-      font-weight:bold;
-      margin-top:8px;
-    }
-
-    .note {
-      font-size:20px;
-      margin-top:8px;
-    }
-
-    button {
-      font-size:18px;
-      padding:10px 18px;
-      margin-top:12px;
-      border:none;
-      border-radius:6px;
-      cursor:pointer;
-    }
-
-    .sound-btn {
-      margin-bottom:20px;
-      font-size:20px;
-      padding:12px 24px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Kjøkken</title>
+<style>
+body { background:#000; color:white; font-family:Arial; text-align:center; padding:30px; }
+.order { padding:20px; margin:12px auto; border-radius:10px; font-size:26px; max-width:650px; text-align:left; }
+.green{background:#1e3d2f;} .yellow{background:#4a4a1e;} .red{background:#4a1e1e;}
+.allergy{color:#ff4444;font-weight:bold;}
+.note{font-size:20px;}
+</style>
 </head>
 <body>
 
 <h1>KJØKKEN</h1>
-
-<button class="sound-btn" onclick="enableSound()">AKTIVER LYD</button>
-
 <div id="orders"></div>
-
-<audio id="ding">
-  <source src="order-up.mp3" type="audio/mpeg">
-</audio>
 
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 <script>
-  /* 🔥 FIREBASE CONFIG */
-  var firebaseConfig = {
-    apiKey: "AIzaSyBpCwh0JIuJphlEyCQTxhDOIdGm9fP5cg4",
-    authDomain: "the-shit-3bfd8.firebaseapp.com",
-    databaseURL: "https://the-shit-3bfd8-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "the-shit-3bfd8",
-    storageBucket: "the-shit-3bfd8.firebasestorage.app",
-    messagingSenderId: "831273156548",
-    appId: "1:831273156548:web:3217cdd0e76870c4af6e91"
-  };
+firebase.initializeApp({
+  apiKey:"AIzaSyBpCwh0JIuJphlEyCQTxhDOIdGm9fP5cg4",
+  databaseURL:"https://the-shit-3bfd8-default-rtdb.europe-west1.firebasedatabase.app"
+});
+const db = firebase.database();
 
-  if (!firebase.apps.length) {
-    firebase.initializeApp(firebaseConfig);
-  }
+db.ref("orders").on("value", snap => {
+  orders.innerHTML = "";
+  const now = Date.now();
 
-  var db = firebase.database();
-  var soundEnabled = false;
-  var lastOrderCount = 0;
+  snap.forEach(child => {
+    const o = child.val();
+    const age = now - o.time;
+    let c = "green";
+    if (age > 240000) c = "red";
+    else if (age > 120000) c = "yellow";
 
-  function enableSound() {
-    const audio = document.getElementById("ding");
-    audio.currentTime = 0;
-    audio.play();
-    soundEnabled = true;
-  }
-
-  /* 🔁 LYTTER + SORTERER + FARGER */
-  db.ref("orders").on("value", snap => {
-    const ordersDiv = document.getElementById("orders");
-    ordersDiv.innerHTML = "";
-
-    let orders = [];
-    const now = Date.now();
-
-    snap.forEach(child => {
-      orders.push({
-        num: child.key,
-        ...child.val()
-      });
-    });
-
-    /* 🔝 ELDSTE FØRST */
-    orders.sort((a, b) => a.time - b.time);
-
-    orders.forEach(o => {
-      const age = now - o.time;
-
-      let colorClass = "green";
-      if (age > 240000) colorClass = "red";       // 4+ min
-      else if (age > 120000) colorClass = "yellow"; // 2–4 min
-
-      const div = document.createElement("div");
-      div.className = `order ${colorClass}`;
-      div.id = "order-" + o.num;
-
-      div.innerHTML = `
-        <div><strong>ORDRE ${o.num}</strong></div>
-        ${o.allergy ? '<div class="allergy">⚠️ ALLERGI</div>' : ''}
-        ${o.note ? `<div class="note">📝 ${o.note}</div>` : ''}
-        <button onclick="done(${o.num})">FERDIG</button>
-      `;
-
-      ordersDiv.appendChild(div);
-    });
-
-    /* 🔊 LYD – ALLTID NÅR ANTALL ØKER */
-    if (soundEnabled && orders.length > lastOrderCount) {
-      const audio = document.getElementById("ding");
-      audio.currentTime = 0; // 🔥 start på nytt selv om den spiller
-      audio.play();
-    }
-
-    lastOrderCount = orders.length;
+    const d = document.createElement("div");
+    d.className = `order ${c}`;
+    d.innerHTML = `
+      <strong>ORDRE ${child.key}</strong>
+      <div style="font-size:24px;margin-top:4px;">🍔 ${o.dish}</div>
+      ${o.allergy ? '<div class="allergy">⚠️ ALLERGI</div>' : ''}
+      ${o.note ? `<div class="note">📝 ${o.note}</div>` : ''}
+      <button onclick="done(${child.key})">FERDIG</button>
+    `;
+    orders.appendChild(d);
   });
+});
 
-  /* ✅ FERDIG → FLYTT TIL KLAR */
-  function done(num) {
-    db.ref("orders/" + num).once("value", snap => {
-      const order = snap.val();
-      if (!order) return;
-
-      db.ref("readyOrders/" + num).set({
-        ...order,
-        readyTime: Date.now()
-      });
-
-      db.ref("orders/" + num).remove();
-      db.ref("stats/completedOrders").transaction(n => (n || 0) + 1);
-
-      setTimeout(() => {
-        db.ref("readyOrders/" + num).remove();
-      }, 180000);
-    });
-  }
+function done(num){
+  db.ref("orders/"+num).once("value", s=>{
+    if(!s.val())return;
+    db.ref("readyOrders/"+num).set({...s.val(),readyTime:Date.now()});
+    db.ref("orders/"+num).remove();
+  });
+}
 </script>
-
 </body>
 </html>
